changed logic for scanning the feed to not miss any entries + added distinct API to get number of unique entries + added xrp filter <, <=, >, >= to search for a specific XRP range
